# dynspire

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
demo/: rle_client.py  rle_client2.py  test_dtype.py  test_struct.py
demo/rle-host/: Cargo.toml  build.rs
demo/rle-host/src/: main.rs
demo/rle-idl/: Cargo.toml  build.rs
demo/rle-idl/src/: lib.rs
demo/rle-spier/: Cargo.toml  build.rs
demo/rle-spier/src/: lib.rs  rle.dspi
docs/: architecture.md  managed-types.md
dynspire/: Cargo.toml
dynspire-codegen/: Cargo.toml
dynspire-codegen/src/: ast.rs  gen.rs  lexer.rs  lib.rs  parser.rs
dynspire-codegen/src/test_data/: demo_with_include.dspi  rle.dspi
dynspire-codegen/src/test_data/fragments/: base.dspi  cycle_a.dspi  cycle_b.dspi  diamond_bottom.dspi  diamond_left.dspi  diamond_right.dspi  diamond_top.dspi  nested_fragment.dspi  shared_types.dspi
dynspire-macro/: Cargo.toml
dynspire-macro/src/: lib.rs
dynspire-py/: Cargo.toml  pyproject.toml
dynspire-py/src/: lib.rs
dynspire-py/src/dynspire/: __init__.py  _runtime.py
dynspire/src/: ffi.rs  kvmap.rs  lib.rs  managed.rs  slots.rs  tower.rs
python/: pyproject.toml
python/src/dynspire/: __init__.py  _client.py  _ffi.py  _schema.py  _slots.py
tests/: test_python_api.py
