[package]
name = "dynspire-py"
version = "0.1.0"
edition = "2021"
description = "PyO3 engine for DynSpire — replaces the pure-Python ctypes adapter"
license = "MIT"

# The Python module is imported as `import dynspire`, so the cdylib must be
# named `dynspire`. The core crate is aliased to `dynspire_core` below to avoid
# the name clash (the crate cannot refer to a dependency with its own lib name).
[lib]
name = "dynspire"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module"] }
dynspire-core = { package = "dynspire", path = "../dynspire" }
libloading = "0.8"
