[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "dynspire"
version = "0.2.0"
description = "PyO3 engine for DynSpire spiers — schema reflection, zero codegen"
requires-python = ">=3.8"
license = "MIT"

[tool.maturin]
# extension-module prevents linking libpython on unix; maturin handles it.
features = ["pyo3/extension-module"]
