[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynspire"
version = "0.3.0"
description = "Pure-Python ctypes runtime for DynSpire spiers — bindings are code-generated, no Rust toolchain needed"
requires-python = ">=3.8"
license = "MIT"

[tool.hatch.build.targets.wheel]
packages = ["src/dynspire"]
