[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynspire"
version = "0.1.0"
description = "Pure-Python ctypes adapter for DynSpire spiers — schema reflection, zero codegen"
license = "MIT"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["src/dynspire"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
