[package]
name = "rle-spier"
version = "0.1.0"
edition = "2021"
description = "DynSpire spier — RLE compression engine (cdylib, loaded via dlopen)"
license = "MIT"

build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
dynspire = { path = "../../dynspire" }

[build-dependencies]
dynspire-codegen = { path = "../../dynspire-codegen" }
